<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.BookDetails">


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/appBar_height"
        android:background="@color/appBar_color"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp"
            app:layout_scrollFlags="exitUntilCollapsed|scroll"
            app:title="Book Title">


            <androidx.appcompat.widget.Toolbar
                android:id="@+id/book_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:theme="@style/ThemeOverlay.AppCompat.Light"
                app:layout_collapseMode="pin">

            </androidx.appcompat.widget.Toolbar>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/detail_book_image"
                        android:layout_width="80dp"
                        android:layout_height="110dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:contentDescription="@string/book_image_description"
                        android:scaleType="centerCrop"
                        android:src="@drawable/placeholder_image" />

                    <TextView
                        android:id="@+id/book_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="15dp"
                        android:drawablePadding="2dp"
                        android:fontFamily="monospace"
                        android:text="@string/book_price"
                        android:textColor="@android:color/black"
                        android:textSize="14sp" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical"
                    android:paddingStart="10dp"
                    android:paddingLeft="10dp">


                    <TextView
                        android:id="@+id/detail_book_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="monospace"
                        android:text="@string/book_title"
                        android:textColor="@android:color/black"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/detail_book_categories"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:fontFamily="monospace"
                        android:text="@string/book_category"
                        android:textSize="14sp" />

                    <RatingBar
                        android:id="@+id/detail_book_rating"
                        style="?attr/ratingBarStyleSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:numStars="5"
                        android:stepSize="1.5"
                        android:theme="@style/RatingBar" />

                    <TextView
                        android:id="@+id/detail_book_authors"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:fontFamily="monospace"
                        android:text="@string/book_authors"
                        android:textSize="14sp" />


                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/buy_book"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#FFFFFF"
                    android:drawableStart="@drawable/buy_icon"
                    android:drawableLeft="@drawable/buy_icon"
                    android:drawablePadding="3dp"
                    android:fontFamily="monospace"
                    android:padding="10dp"
                    android:text="@string/buy"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    android:textSize="14sp"
                    android:visibility="visible" />

                <TextView
                    android:id="@+id/preview_book"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:background="#FFFFFF"
                    android:fontFamily="monospace"
                    android:padding="10dp"
                    android:text="@string/preview"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    android:textSize="14sp"
                    android:visibility="visible" />


            </LinearLayout>


        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">


        <TextView
            android:id="@+id/book_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:inputType="textMultiLine"
            android:text="Book Description"
            android:textAlignment="textStart"
            android:textColor="#000000" />


    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>